Update upload form design - fixed moving collapse content issue + added css vars to vues

--- a/client/src/assets/base.css
+++ b/client/src/assets/base.css
@@ -1,6 +1,7 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
   --teal: rgb(36, 123, 121);
+  --mint: rgb(53, 200, 200);
   --orange: rgb(185,124,0);
   --cool-grey: rgb(93,92,92);
   --light-grey: rgb(235,235,235);
@@ -8,9 +9,9 @@
 
 body {
   min-height: 100vh;
-  color: var(--color-text);
-  background: var(--color-background);
-  transition: color 0.5s, background-color 0.5s;
+  /* color: var(--color-text); */
+  /* background: var(--color-background); */
+  /* transition: color 0.5s, background-color 0.5s; */
   line-height: 1.6;
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
